<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dashboard_back_screen"
    tools:context=".Dashboard_Page">

    <include
        android:id="@+id/toolbar_id"
        layout="@layout/toolbaar"
        >
    </include>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clipToPadding="false"
            >

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:padding="10dp"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:layout_margin="5dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    >

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/departmentyellowcolor"
                        android:padding="25dp"
                        android:src="@drawable/datesheeticon" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/nullback"
                        android:text="@string/Exams"
                        android:fontFamily="@font/centurygothic"
                        android:onClick="DatesheetLayout"
                        android:textColor="@color/yellow"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:foregroundGravity="center"
                        android:paddingLeft="20dp"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:padding="10dp"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:layout_margin="5dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    >

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:src="@drawable/timetable_icon"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/departmentgreen"
                        android:foregroundGravity="center"
                        android:padding="25dp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/nullback"
                        android:text="@string/ClassesTiming"
                        android:fontFamily="@font/centurygothic"
                        android:onClick="TimetableLayout"
                        android:textColor="@color/green"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:foregroundGravity="center"
                        android:paddingLeft="20dp"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="vertical"
            >

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:padding="10dp"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:layout_margin="5dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    >

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/departmentgroundpurple"
                        android:src="@drawable/announcmemnticon"
                        android:padding="25dp"
                        android:layout_gravity="center"
                        android:foregroundGravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/nullback"
                        android:text="@string/otherAnnouncements"
                        android:fontFamily="@font/centurygothic"
                        android:onClick="OtherAnnouncementLayout"
                        android:textColor="@color/deeppurple"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:foregroundGravity="center"
                        android:paddingLeft="20dp"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:padding="10dp"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:layout_margin="5dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    >

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/departmentpinkaccent"
                        android:src="@drawable/developericon"
                        android:padding="25dp"
                        android:layout_gravity="center"
                        android:foregroundGravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/nullback"
                        android:text="@string/DeveloperDetails"
                        android:fontFamily="@font/centurygothic"
                        android:onClick="DeveloperDetailsLayout"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:foregroundGravity="center"
                        android:paddingLeft="20dp"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>

    </LinearLayout>
    


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        ></View>

</LinearLayout>